# common_data_analysis

./: .gitignore  docker-compose.yml  dockerfile  dockerfile_base  entrypoint.sh  main.py  pyproject.toml  readme.md  single_form.py
app/: api_function.py  celery_main.py
app/api/: __init__.py  apis.py  kakao_api.py  kakao_strategy.py
app/base/: api_base.py  celery_base.py  mqmanage_base.py
app/model/: __init__.py  api_model.py  common_model.py  spatial_model.py
app/utils/: __init__.py  config_manage.py  geohash_manage.py  geohash_manage_v0.py  log.py  password_manage.py
sample/: extraction.py
src/: api_common.py
src/model/: __init__.py  apis.py  common_model.py  kakao_model.py  public_model.py
src/utils/: __init__.py  config_manage.py  log.py
test/: test_api_class.py  test_celery_worker.py  test_model.py
tests/module_test/: test_api_celery_item.py  test_kakao.py
tests/unit_test/: test_api_class.py  test_celery_local.py  test_celery_mq.py  test_communicate.py  test_geohash.py  test_model.py
