[tool.poetry]
name = "common-data-analysis"
version = "0.2.0"
description = "analysis package for common & geospatial data"
authors = ["John Park <johnpark@johnssonslab.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
geopandas = "^0.13.2"
pydantic = "^2.0.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pyreadstat = "^1.2.2"
celery = "^5.3.1"
pygeohash = "^1.2.0"
pillow = "^10.0.0"
matplotlib = "^3.7.2"
geohash_manager = { git = "https://github.com/Johnssonslotion/geohash_manager" }
pika = "^1.3.2"
cryptography = "^41.0.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-celery = "^0.0.0"
tqdm = "^4.66.0"
flower = "^2.0.1"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
seaborn = "^0.12.2"
notebook = "^7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["app"]
